--- a/package.json
+++ b/package.json
@@ -32,21 +32,22 @@
     "@nextcloud/l10n": "^1.6.0",
     "@nextcloud/paths": "^2.1.0",
     "@nextcloud/sharing": "^0.1.0",
-    "@nextcloud/vue": "7.1.0",
+    "@nextcloud/vue": "7.2.0",
     "camelcase": "^7.0.0",
     "filerobot-image-editor": "^4.3.7",
     "justified-layout": "^4.1.0",
     "moment": "^2.29.4",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "path-posix": "^1.0.0",
     "photoswipe": "^5.3.4",
     "plyr": "^3.7.3",
     "reflect-metadata": "^0.1.13",
     "video.js": "^7.20.3",
-    "videojs-contrib-quality-levels": "^2.2.0",
-    "vue": "^2.7.10",
+    "videojs-contrib-quality-levels": "^2.2.1",
+    "vue": "^3.2.45",
     "vue-material-design-icons": "^5.1.2",
-    "vue-router": "^3.5.4",
-    "vue-virtual-scroller": "1.1.2",
+    "vue-router": "^4.1.6",
+    "vue-virtual-scroller": "2.0.0-beta.5",
     "webdav": "^4.11.2"
   },
   "browserslist": [
@@ -59,13 +60,19 @@
   "devDependencies": {
     "@nextcloud/babel-config": "^1.0.0",
     "@nextcloud/browserslist-config": "^2.3.0",
-    "@nextcloud/webpack-vue-config": "^5.4.0",
-    "@playwright/test": "^1.28.0",
+    "@playwright/test": "^1.28.1",
     "@types/url-parse": "^1.4.8",
-    "@types/video.js": "^7.3.49",
-    "playwright": "^1.28.0",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.9.3",
+    "@types/video.js": "^7.3.50",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.2",
+    "playwright": "^1.28.1",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "vue-loader": "^17.0.1",
+    "webpack-cli": "^5.0.1",
     "workbox-webpack-plugin": "^6.5.4"
   }
 }
